# RustScript

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_wasm.bat  sample.rjsc  serve.py
src/: ast.rs  borrow_checker.rs  codegen_wasm.rs  compiler.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  memory.rs  parser.lalrpop  sourcemap.rs  std_lib.rs  typechecker.rs
www/: index.html  loader.js
